--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,11 @@
-name: SSKMC
+name: benchmark_env
 channels:
   - conda-forge
   - bioconda
 dependencies:
   - python=3.9
-  - biopython
-  - snakemake
-  - pyyaml
-  - pandas
   - matplotlib
+  - pandas
+  - ggcat
+  - cmake
+  - curl
